add_subdirectory(anagram)
# add_subdirectory(binary_search_tree)
# add_subdirectory(contains_duplicates)
# add_subdirectory(count_words)
# add_subdirectory(dup_char)
# add_subdirectory(fibonacci)
# add_subdirectory(first_non_repeating_char)
# add_subdirectory(fizzbuzz)
# add_subdirectory(format_string_grouping)
# add_subdirectory(jewels_and_stones)
# add_subdirectory(lcm)
# add_subdirectory(letter_freq)
# add_subdirectory(linked_list)
# add_subdirectory(longest_substring_non_repeating)
# add_subdirectory(most_freq_int)
# add_subdirectory(number_of_steps)
# add_subdirectory(nums_smaller_than_current)
# add_subdirectory(pair_sum)
# add_subdirectory(palindrome)
# add_subdirectory(pretend_stack)
# add_subdirectory(remove_dup_sorted)
# add_subdirectory(reverse_string)
# add_subdirectory(reverse_vowel)
# add_subdirectory(rotated_vector)
# add_subdirectory(shuffle_string)
# add_subdirectory(smallest_positive)
# add_subdirectory(stock_buy_sell)
# add_subdirectory(triple_substring_freq)
# add_subdirectory(valid_parentheses)
# add_subdirectory(vowel_count)
# add_subdirectory(water_bottles)
